Add game overlay and toggle button to index.html

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 </head>
 <body>
 
-<div id="game">
+  <div id="game">
   <div id="score">0</div>
+  <button id="toggle">Dark</button>
   <div id="stack"></div>
+
   <div id="overlay" class="hidden">
     <p>Game Over</p>
     <button id="restart">Restart</button>
   </div>
 </div>
+
 
 <script src="game.js"></script>
 </body>
