--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8" />
   <title>Reflex Stack</title>
@@ -8,9 +8,10 @@
 </head>
 <body>
 
-  <div id="game">
+<div id="game">
   <div id="score">0</div>
   <button id="toggle">Dark</button>
+
   <div id="stack"></div>
 
   <div id="overlay" class="hidden">
@@ -18,7 +19,6 @@
     <button id="restart">Restart</button>
   </div>
 </div>
-
 
 <script src="game.js"></script>
 </body>
